# Sistem-Pakar

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  database.sql  db_init.sql  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  crud.py  db.py  dependensi.py  diagnosis_engine.py  keamanan.py  konfigurasi.py  main.py  mesin.py  model.py  models.py  schemas.py  security.py  seed_data.py  skema.py
app/routers/: admin.py  admin_api.py  auth.py  pages.py  public_api.py  publik.py
backend/: README.md  db_init.sql  requirements.txt
backend/app/: keamanan.py  main.py  model.py  skema.py
backend/app/routers/: admin.py  diagnosa.py
backend/frontend/: admin.html  diagnosa.html  jenis-gangguan.html  login.html
frontend/: admin.html  diagnosa.html  index.html  jenis-gangguan.html  login.html
static/: admin.js  admin_dashboard.js  app.js
templates/: admin_dashboard.html  admin_login.html  base.html  index.html
