[project]
name = "sistem-pakar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "jinja2>=3.1",
    "passlib>=1.7",
    "pydantic-settings>=2.0",
    "pymysql>=1.1",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.27",
]
