[project]
name = "sistem-pakar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "pymysql==1.1.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.30.6",
]
